--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ignite-ui/react": "^2.2.4",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
+    "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
